--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "file-loader": "^6.2.0",
-    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -45,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
